[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vibevoice-fastapi"
version = "0.0.1"
authors = [
  { name="vibevoice team", email="vibepod@microsoft.com" },
]
description = "FastAPI wrapper for VibeVoice multi-speaker TTS model with queue management and status tracking."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    # "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch",
    "accelerate==1.6.0",
    "transformers==4.51.3", # we develop this project on transformers==4.51.3, later version may not be compatible
    "diffusers",
    "tqdm",
    "numpy",
    "scipy",
    "librosa",
    "ml-collections",
    "absl-py",
    "gradio",
    "av",
    "aiortc",
    # FastAPI dependencies
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "slowapi>=0.1.9",
    "python-multipart"
]


[project.urls]
"Homepage" = "https://github.com/microsoft/VibeVoice"
"Bug Tracker" = "https://github.com/microsoft/VibeVoice/issues"

[tool.setuptools.packages.find]
where = ["."]
